--- a/.github/workflows/auto-comimter.yml
+++ b/.github/workflows/auto-comimter.yml
@@ -24,8 +24,5 @@ jobs:
           git commit -m "Automated commit"
       
       - name: Push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}.git
-          git push origin HEAD:main
+          git push
