--- a/.github/workflows/auto-committer.yml
+++ b/.github/workflows/auto-committer.yml
@@ -2,7 +2,7 @@ name: Auto Commit
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight
+    - cron: "0 0/12 * * *"
   push:
     branches:
       - main
